--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/estilo1.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
     <nav id="main-nav">
@@ -20,9 +20,9 @@
                 <span class="bar"></span>
             </button>
             <ul class="nav-links">
-                <li><a href="curso.html">Curso Gratuito</a></li>
-                <li><a href="calculadora.html">Calculadora de Custo</a>
-                <li><a href="ebook.html">Dicas</a></li>
+                <li><a href="pages/curso.html">Curso Gratuito</a></li>
+                <li><a href="pages/calculadora.html">Calculadora de Custo</a>
+                <li><a href="pages/ebook.html">Dicas</a></li>
                 <li><a href="#depoimentos">Depoimentos</a></li>
                 <li><a href="#sobre-mim">Sobre</a></li>
                 </li>
@@ -198,5 +198,7 @@
         </div>
         <p>Dr. Yamaha © <span id="current-year"></span> - Todos os direitos reservados</p>
     </footer>
-    <script src="javascript/index.js"></script>
+    <script src="js/index.js"></script>
+</body>
+</html>
     
