--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
         <section id="sobre-mim" class="about-section">
             <div class="about-image">
-                <img src="river.jpg" alt="Foto do Dr. Yamaha em sua oficina" class="profile-image-large" width="250"
+                <img src="images/river.jpg" alt="Foto do Dr. Yamaha em sua oficina" class="profile-image-large" width="250"
                     height="250" loading="lazy" decoding="async">
             </div>
             <div class="about-text">
@@ -138,7 +138,7 @@
         <section id="depoimentos" class="grid-section">
             <h2 class="section-title" style="grid-column: 1 / -1;">O que dizem os clientes</h2>
             <div class="testimonial-card">
-                <img src="dayv.jpg" alt="Yamaha" class="profile-image" width="320" height="320"
+                <img src="images/dayv.jpg" alt="Yamaha" class="profile-image" width="320" height="320"
                     loading="lazy" decoding="async">
                 <p>“Só quem já ficou na mão com mecânico enrolado sabe o tanto que é difícil achar alguém de confiança.
                     Mas o Dr. Yamaha é diferente. Ele explica tudo certinho, não enrola e ainda dá dica que a gente
@@ -146,7 +146,7 @@
                 <p>Dayvdson Silva</p>
             </div>
             <div class="testimonial-card">
-                <img src="mani.jpg" alt="Yamaha" class="profile-image" width="320" height="320"
+                <img src="images/mani.jpg" alt="Yamaha" class="profile-image" width="320" height="320"
                     loading="lazy" decoding="async">
                 <p>“Sabe aquele tipo de atendimento que parece que a pessoa conhece sua moto melhor que você? Pois é.
                     Atendimento do Dr. Yamaha é coisa fina. Resolveu um problema que outra oficina mexeu três vezes e
@@ -154,7 +154,7 @@
                 <p>Manilson Froes</p>
             </div>
             <div class="testimonial-card">
-                <img src="fabi.jpg" alt="Foto do Dr. Yamaha" class="profile-image" width="320" height="320"
+                <img src="images/fabi.jpg" alt="Foto do Dr. Yamaha" class="profile-image" width="320" height="320"
                     loading="lazy" decoding="async">
                 <p>“Eu valoriza serviço bem feito e palavra firme. E é isso que encontrei com a
                     consultoria do Dr. Yamaha. Ele entende mesmo, fala a real e entrega resultado. Não é só
