--- a/pages/calculadora.html
+++ b/pages/calculadora.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Calculadora de Custo de Moto</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/calculadora.css">
+    <link rel="stylesheet" href="/css/calculadora.css">
 </head>
 
 <body>
@@ -41,6 +41,6 @@
         </div>
     </div>
 
-    <script src="js/calculadora.js"></script>
+    <script src="/js/calculadora.js"></script>
 </body>
 </html>
