--- a/pages/calculadora.html
+++ b/pages/calculadora.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Calculadora de Custo de Moto</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Dr.Yamaha/css/calculadora.css">
+    <link rel="stylesheet" href="css/calculadora.css">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
         <input type="number" id="anos" placeholder="Ex: 3">
 
         <button onclick="calcular()">Calcular Custo Total</button>
-        <button onclick="window.location.href = 'Dr.Yamaha/index.html'" class="button">Voltar</button>
+        <button onclick="window.location.href = 'index.html'" class="button">Voltar</button>
 
         <div class="result" id="resultado" style="display:none;">
             <h2>Resultado</h2>
@@ -41,6 +41,6 @@
         </div>
     </div>
 
-    <script src="Dr.Yamaha/js/calculadora.js"></script>
+    <script src="js/calculadora.js"></script>
 </body>
 </html>
