--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                 <span class="bar"></span>
             </button>
             <ul class="nav-links">
-                <li><a href="pages/curso.html">Curso Gratuito</a></li>
-                <li><a href="pages/calculadora.html">Calculadora de Custo</a>
-                <li><a href="pages/ebook.html">Dicas</a></li>
+                <li><a href="curso.html">Curso Gratuito</a></li>
+                <li><a href="calculadora.html">Calculadora de Custo</a>
+                <li><a href="ebook.html">Dicas</a></li>
                 <li><a href="#depoimentos">Depoimentos</a></li>
                 <li><a href="#sobre-mim">Sobre</a></li>
                 </li>
@@ -156,7 +156,7 @@
             <div class="testimonial-card">
                 <img src="images/fabi.jpg" alt="Foto do Dr. Yamaha" class="profile-image" width="320" height="320"
                     loading="lazy" decoding="async">
-                <p>“Eu valoriza serviço bem feito e palavra firme. E é isso que encontrei com a
+                <p>“Eu valorizo serviço bem feito e palavra firme. E é isso que encontrei com a
                     consultoria do Dr. Yamaha. Ele entende mesmo, fala a real e entrega resultado. Não é só
                     mecânico, é parceiro.”</p>
                 <p>Fabiano Athaide</p>
