--- a/curso.html
+++ b/curso.html
@@ -162,6 +162,112 @@
                                 <label><input type="radio" name="q3" value="b"> b) O pneu traseiro se desgastará mais rápido.</label>
                                 <label><input type="radio" name="q3" value="c"> c) Pode escapar e travar a roda, causando um acidente.</label>
                             </div>
+                            <div class="quiz-question">
+                            <p>4. Qual é a frequência recomendada para lubrificar a corrente da relação?</p>
+                            <div class="quiz-options" data-correct="b">
+                                <label><input type="radio" name="q4" value="a"> a) A cada 1000km</label>
+                                <label><input type="radio" name="q4" value="b"> b) A cada 500km ou após pegar chuva</label>
+                                <label><input type="radio" name="q4" value="c"> c) Sempre que o pneu traseiro for calibrado</label>
+                            </div>
+                        </div>
+
+                        <div class="quiz-question">
+                            <p>5. O que indica que as pastilhas de freio precisam ser trocadas?</p>
+                            <div class="quiz-options" data-correct="a">
+                                <label><input type="radio" name="q5" value="a"> a) Estão muito finas visualmente</label>
+                                <label><input type="radio" name="q5" value="b"> b) A moto acelera sozinha</label>
+                                <label><input type="radio" name="q5" value="c"> c) A luz do farol pisca</label>
+                            </div>
+                        </div>
+
+                        <div class="quiz-question">
+                            <p>6. O que pode causar falha na frenagem?</p>
+                            <div class="quiz-options" data-correct="c">
+                                <label><input type="radio" name="q6" value="a"> a) Óleo velho no motor</label>
+                                <label><input type="radio" name="q6" value="b"> b) Corrente frouxa</label>
+                                <label><input type="radio" name="q6" value="c"> c) Pastilhas gastas ou fluido de freio baixo</label>
+                            </div>
+                        </div>
+
+                        <div class="quiz-question">
+                            <p>7. Por que é importante verificar os cabos da embreagem e do acelerador?</p>
+                            <div class="quiz-options" data-correct="a">
+                                <label><input type="radio" name="q7" value="a"> a) Para evitar folgas ou travamentos perigosos</label>
+                                <label><input type="radio" name="q7" value="b"> b) Para reduzir o consumo de combustível</label>
+                                <label><input type="radio" name="q7" value="c"> c) Para melhorar o barulho do motor</label>
+                            </div>
+                        </div>
+
+                        <div class="quiz-question">
+                            <p>8. Quando é melhor calibrar os pneus?</p>
+                            <div class="quiz-options" data-correct="b">
+                                <label><input type="radio" name="q8" value="a"> a) Depois de rodar 15 minutos</label>
+                                <label><input type="radio" name="q8" value="b"> b) Com os pneus frios</label>
+                                <label><input type="radio" name="q8" value="c"> c) No final do dia</label>
+                            </div>
+                        </div>
+
+                        <div class="quiz-question">
+                            <p>9. O que pode acontecer se a corrente estiver seca?</p>
+                            <div class="quiz-options" data-correct="c">
+                                <label><input type="radio" name="q9" value="a"> a) O motor aquece mais</label>
+                                <label><input type="radio" name="q9" value="b"> b) A bateria descarrega</label>
+                                <label><input type="radio" name="q9" value="c"> c) A relação desgasta mais rápido</label>
+                            </div>
+                        </div>
+
+                        <div class="quiz-question">
+                            <p>10. Qual item não faz parte da relação da moto?</p>
+                            <div class="quiz-options" data-correct="a">
+                                <label><input type="radio" name="q10" value="a"> a) Vela de ignição</label>
+                                <label><input type="radio" name="q10" value="b"> b) Corrente</label>
+                                <label><input type="radio" name="q10" value="c"> c) Pinhão</label>
+                            </div>
+                        </div>
+
+                        <div class="quiz-question">
+                            <p>11. Qual é um sinal de luz de freio com defeito?</p>
+                            <div class="quiz-options" data-correct="b">
+                                <label><input type="radio" name="q11" value="a"> a) O farol acende e apaga</label>
+                                <label><input type="radio" name="q11" value="b"> b) Ao frear, a luz traseira não acende</label>
+                                <label><input type="radio" name="q11" value="c"> c) A buzina falha</label>
+                            </div>
+                        </div>
+
+                        <div class="quiz-question">
+                            <p>12. O que pode causar aceleração involuntária?</p>
+                            <div class="quiz-options" data-correct="a">
+                                <label><input type="radio" name="q12" value="a"> a) Cabo do acelerador preso</label>
+                                <label><input type="radio" name="q12" value="b"> b) Corrente muito lubrificada</label>
+                                <label><input type="radio" name="q12" value="c"> c) Freio mal ajustado</label>
+                            </div>
+                        </div>
+
+                        <div class="quiz-question">
+                            <p>13. Qual o principal objetivo da manutenção preventiva?</p>
+                            <div class="quiz-options" data-correct="b">
+                                <label><input type="radio" name="q13" value="a"> a) Deixar a moto mais bonita</label>
+                                <label><input type="radio" name="q13" value="b"> b) Evitar problemas e garantir segurança</label>
+                                <label><input type="radio" name="q13" value="c"> c) Aumentar o barulho do motor</label>
+                            </div>
+                        </div>
+
+                        <div class="quiz-question">
+                            <p>14. A luz alta do farol deve ser usada:</p>
+                            <div class="quiz-options" data-correct="c">
+                                <label><input type="radio" name="q14" value="a"> a) Durante o dia sempre</label>
+                                <label><input type="radio" name="q14" value="b"> b) No trânsito urbano</label>
+                                <label><input type="radio" name="q14" value="c"> c) Em rodovias ou locais escuros</label>
+                            </div>
+                        </div>
+
+                        <div class="quiz-question">
+                            <p>15. O que fazer se a buzina parar de funcionar?</p>
+                            <div class="quiz-options" data-correct="a">
+                                <label><input type="radio" name="q15" value="a"> a) Verificar fusível e conexão elétrica</label>
+                                <label><input type="radio" name="q15" value="b"> b) Lubrificar a corrente</label>
+                                <label><input type="radio" name="q15" value="c"> c) Trocar o fluido de freio</label>
+                            </div>
                         </div>
                         <button type="button" id="check-answers-btn" class="btn" style="width: 100%; margin-top: 1rem;">Verificar Respostas</button>
                         <div id="quiz-results"></div>
@@ -171,12 +277,13 @@
         </main>
 
         <footer class="course-footer">
-            <p style="margin-bottom: 1.5rem; color: var(--text-secondary);">Parabéns! Com estes passos simples, você já está cuidando muito melhor da sua moto. Para dúvidas, agende uma consultoria!</p><br>
-            <a href="https://wa.me/5538988340443?text=Ol%C3%A1%20Dr.%20Yamaha!%20Quero%20uma%20consultoria." target="_blank" rel="noopener noreferrer" class="btn btn-whatsapp">Agendar Consultoria</a>
+<!--             <p style="margin-bottom: 1.5rem; color: var(--text-secondary);">Parabéns! Com estes passos simples, você já está cuidando muito melhor da sua moto. Para dúvidas, agende uma consultoria!</p><br> -->
+<!--             <a href="https://wa.me/5538988340443?text=Ol%C3%A1%20Dr.%20Yamaha!%20Quero%20uma%20consultoria." target="_blank" rel="noopener noreferrer" class="btn btn-whatsapp">Agendar Consultoria</a> -->
         </footer>
-<!--         <a href="index.html" class="btn">Voltar</a> -->
+        <a href="index.html" class="btn">Voltar</a>
     </div>
     </div>
+    <audio id="quiz-audio" src="sound/topic.mp3" preload="auto" loop></audio>
 </body>
     <script src="js/curso.js"></script>
     
