--- a/curso.html
+++ b/curso.html
@@ -283,7 +283,7 @@
         <a href="index.html" class="btn">Voltar</a>
     </div>
     </div>
-    <audio id="quiz-audio" src="sound/topic.mp3" preload="auto" loop></audio>
+    <audio id="quiz-audio" src="assets/topic.mp3" preload="auto" loop></audio>
 </body>
     <script src="js/curso.js"></script>
     
