--- a/curso.html
+++ b/curso.html
@@ -131,6 +131,10 @@
                     </ul>
                 </div>
             </section>
+            
+            <div style="text-align: center; margin: 3rem 0;">
+                <button id="start-quiz-btn" class="btn">Avalie seu conhecimento</button>
+            </div>
 
             <section id="avaliacao" class="slide">
                 <div class="slide-header">
