--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
             </ul>
         </div>
     </nav>
+    <div class="container">
+        <div class="header text-center">
+            <h2>Bem-vindo à sua nova jornada sobre duas rodas</h2>
+            <p>Evite gastos desnecessários e faça as melhores escolhas para sua motocicleta com a ajuda de um especialista.</p>
+            <div class="cta-buttons">
+                <a href="curso.html" class="btn btn-secondary">Acesse o Curso Gratuito</a>
+            </div>
+        </div>
+    </div>
 
     <main class="container">
         <section id="servicos" class="grid-section">
