--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <li><a href="calculadora.html">Calculadora de Custo</a>
                 <li><a href="ebook.html">Dicas</a></li>
                 <li><a href="#depoimentos">Depoimentos</a></li>
-                <li><a href="#sobre-mim">Sobre</a></li>
+                <li><a href="#sobre-mim">Sobre mim</a></li>
                 </li>
             </ul>
         </div>
@@ -114,6 +114,42 @@
                 </ul>
             </div>
         </section>
+        <!-- Carrossel de Imagens -->
+<section id="galeria">
+    <h2 class="section-title">Momentos na Oficina</h2>
+    <div class="carousel">
+        <div class="carousel-track">
+            <img src="assets/img1.jpg" alt="Imagem 1 da oficina" class="carousel-img">
+            <img src="assets/img2.jpg" alt="Imagem 2 da oficina" class="carousel-img">
+            <img src="assets/img3.jpg" alt="Imagem 3 da oficina" class="carousel-img">
+            <img src="assets/img4.jpg" alt="Imagem 4 da oficina" class="carousel-img">
+            <img src="assets/img5.jpg" alt="Imagem 5 da oficina" class="carousel-img">
+            <img src="assets/img6.jpg" alt="Imagem 6 da oficina" class="carousel-img">
+        </div>
+    </div>
+</section>
+
+<!-- Perguntas Frequentes -->
+<section id="faq">
+    <h2 class="section-title">Perguntas Frequentes</h2>
+    <div class="faq-item">
+        <h3> A consultoria é online ou presencial?</h3>
+        <p>Ambas! Para inspeções físicas em motos, o atendimento é presencial em Montes Claros - MG. Para dúvidas e orientações, ofereço consultoria online por chamada ou mensagem.</p>
+    </div>
+    <div class="faq-item">
+        <h3> Posso agendar só para tirar dúvidas simples?</h3>
+        <p>Sim! Você pode agendar uma consultoria pontual para esclarecer dúvidas específicas sobre sua moto ou manutenção.</p>
+    </div>
+    <div class="faq-item">
+        <h3> Como sei se vale a pena comprar uma moto usada?</h3>
+        <p>Na consultoria de pré-compra, avaliamos a moto presencialmente (ou com fotos e vídeos), considerando desgaste, histórico e custo-benefício.</p>
+    </div>
+    <div class="faq-item">
+        <h3> A consultoria serve para motos de outras marcas?</h3>
+        <p>Sim! Apesar do foco na Yamaha, tenho experiência com diversas marcas e modelos, sempre buscando soluções práticas e honestas.</p>
+    </div>
+</section>
+
 
         <section id="sobre-mim" class="about-section">
             <div class="about-image">
