--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
     <h2 class="section-title">Momentos na Oficina</h2>
     <div class="carousel">
         <div class="carousel-track">
-            <img src="assets/img1.jpg" alt="Imagem 1 da oficina" class="carousel-img">
-            <img src="assets/img2.jpg" alt="Imagem 2 da oficina" class="carousel-img">
-            <img src="assets/img3.jpg" alt="Imagem 3 da oficina" class="carousel-img">
-            <img src="assets/img4.jpg" alt="Imagem 4 da oficina" class="carousel-img">
-            <img src="assets/img5.jpg" alt="Imagem 5 da oficina" class="carousel-img">
-            <img src="assets/img6.jpg" alt="Imagem 6 da oficina" class="carousel-img">
+            <img src="images/img1.jpg" alt="Imagem 1 da oficina" class="carousel-img">
+            <img src="images/img2.jpg" alt="Imagem 2 da oficina" class="carousel-img">
+            <img src="images/img3.jpg" alt="Imagem 3 da oficina" class="carousel-img">
+            <img src="images/img4.jpg" alt="Imagem 4 da oficina" class="carousel-img">
+            <img src="images/img5.jpg" alt="Imagem 5 da oficina" class="carousel-img">
+            <img src="images/img6.jpg" alt="Imagem 6 da oficina" class="carousel-img">
         </div>
     </div>
 </section>
