--- a/index.html
+++ b/index.html
@@ -31,15 +31,28 @@
     </nav>
     <div class="container">
         <div class="header text-center">
-            <h2>Bem-vindo à sua nova jornada sobre duas rodas</h2>
+<!--             <h2>Bem-vindo à sua nova jornada sobre duas rodas</h2> -->
             <p>Evite gastos desnecessários e faça as melhores escolhas para sua motocicleta com a ajuda de um especialista.</p>
             <div class="cta-buttons">
-                <a href="curso.html" class="btn btn-secondary">Acesse o Curso Gratuito</a>
+                <a href="curso.html" class="btn btn-secondary">Curso Gratuito</a>
             </div>
         </div>
     </div>
 
     <main class="container">
+        <section id="galeria">
+        <!--     <h2 class="section-title">Momentos na Oficina</h2> -->
+            <div class="carousel">
+                <div class="carousel-track">
+                    <img src="images/img1.jpg" alt="Imagem 1 da oficina" class="carousel-img">
+                    <img src="images/img2.jpg" alt="Imagem 2 da oficina" class="carousel-img">
+                    <img src="images/img3.jpg" alt="Imagem 3 da oficina" class="carousel-img">
+                    <img src="images/img4.jpg" alt="Imagem 4 da oficina" class="carousel-img">
+                    <img src="images/img5.jpg" alt="Imagem 5 da oficina" class="carousel-img">
+                    <img src="images/img6.jpg" alt="Imagem 6 da oficina" class="carousel-img">
+                </div>
+            </div>
+        </section>
         <section id="servicos" class="grid-section">
             <div class="card">
                 <div class="card-icon">
@@ -114,41 +127,27 @@
                 </ul>
             </div>
         </section>
-        <!-- Carrossel de Imagens -->
-<section id="galeria">
-    <h2 class="section-title">Momentos na Oficina</h2>
-    <div class="carousel">
-        <div class="carousel-track">
-            <img src="images/img1.jpg" alt="Imagem 1 da oficina" class="carousel-img">
-            <img src="images/img2.jpg" alt="Imagem 2 da oficina" class="carousel-img">
-            <img src="images/img3.jpg" alt="Imagem 3 da oficina" class="carousel-img">
-            <img src="images/img4.jpg" alt="Imagem 4 da oficina" class="carousel-img">
-            <img src="images/img5.jpg" alt="Imagem 5 da oficina" class="carousel-img">
-            <img src="images/img6.jpg" alt="Imagem 6 da oficina" class="carousel-img">
-        </div>
-    </div>
-</section>
 
 <!-- Perguntas Frequentes -->
-<section id="faq">
-    <h2 class="section-title">Perguntas Frequentes</h2>
-    <div class="faq-item">
-        <h3> A consultoria é online ou presencial?</h3>
-        <p>Ambas! Para inspeções físicas em motos, o atendimento é presencial em Montes Claros - MG. Para dúvidas e orientações, ofereço consultoria online por chamada ou mensagem.</p>
-    </div>
-    <div class="faq-item">
-        <h3> Posso agendar só para tirar dúvidas simples?</h3>
-        <p>Sim! Você pode agendar uma consultoria pontual para esclarecer dúvidas específicas sobre sua moto ou manutenção.</p>
-    </div>
-    <div class="faq-item">
-        <h3> Como sei se vale a pena comprar uma moto usada?</h3>
-        <p>Na consultoria de pré-compra, avaliamos a moto presencialmente (ou com fotos e vídeos), considerando desgaste, histórico e custo-benefício.</p>
-    </div>
-    <div class="faq-item">
-        <h3> A consultoria serve para motos de outras marcas?</h3>
-        <p>Sim! Apesar do foco na Yamaha, tenho experiência com diversas marcas e modelos, sempre buscando soluções práticas e honestas.</p>
-    </div>
-</section>
+        <section id="faq">
+            <h3 class="section-title">Perguntas Frequentes</h3>
+            <div class="faq-item">
+                <h3> A consultoria é online ou presencial?</h3>
+                <p>Ambas! Para inspeções físicas em motos, o atendimento é presencial em Montes Claros - MG. Para dúvidas e orientações, ofereço consultoria online por chamada ou mensagem.</p>
+            </div>
+            <div class="faq-item">
+                <h3> Posso agendar só para tirar dúvidas simples?</h3>
+                <p>Sim! Você pode agendar uma consultoria pontual para esclarecer dúvidas específicas sobre sua moto ou manutenção.</p>
+            </div>
+            <div class="faq-item">
+                <h3> Como sei se vale a pena comprar uma moto usada?</h3>
+                <p>Na consultoria de pré-compra, avaliamos a moto presencialmente (ou com fotos e vídeos), considerando desgaste, histórico e custo-benefício.</p>
+            </div>
+            <div class="faq-item">
+                <h3> A consultoria serve para motos de outras marcas?</h3>
+                <p>Sim! Apesar do foco na Yamaha, tenho experiência com diversas marcas e modelos, sempre buscando soluções práticas e honestas.</p>
+            </div>
+        </section>
 
 
         <section id="sobre-mim" class="about-section">
