--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -21,8 +20,8 @@
             </button>
             <ul class="nav-links">
                 <li><a href="curso.html">Curso Gratuito</a></li>
-                <li><a href="calculadora.html">Calculadora de Custo</a>
-                <li><a href="ebook.html">Dicas</a></li>
+                <li><a href="calculadora.html">Calculadora de Custos</a>
+                <li><a href="ebook.html">Dicas de Manutenção</a></li>
                 <li><a href="#depoimentos">Depoimentos</a></li>
                 <li><a href="#sobre-mim">Sobre mim</a></li>
                 </li>
@@ -31,17 +30,14 @@
     </nav>
     <div class="container">
         <div class="header text-center">
-<!--             <h2>Bem-vindo à sua nova jornada sobre duas rodas</h2> -->
             <p>Evite gastos desnecessários e faça as melhores escolhas para sua motocicleta com a ajuda de um especialista.</p>
             <div class="cta-buttons">
-                <a href="curso.html" class="btn btn-secondary">Curso Gratuito</a>
+                <a href="curso.html" class="btn btn-secondary">Acesse Mini Curso Gratuito</a>
             </div>
         </div>
     </div>
-
     <main class="container">
-        <section id="galeria">
-        <!--     <h2 class="section-title">Momentos na Oficina</h2> -->
+<!--         <section id="galeria">
             <div class="carousel">
                 <div class="carousel-track">
                     <img src="images/img1.jpg" alt="Imagem 1 da oficina" class="carousel-img">
@@ -52,7 +48,7 @@
                     <img src="images/img6.jpg" alt="Imagem 6 da oficina" class="carousel-img">
                 </div>
             </div>
-        </section>
+        </section> -->
         <section id="servicos" class="grid-section">
             <div class="card">
                 <div class="card-icon">
@@ -78,7 +74,6 @@
                         target="_blank" rel="noopener noreferrer" class="btn btn-whatsapp">Agendar Consulta</a></p>
                 </ul>
             </div>
-
             <div id="curso" class="card">
                 <div class="card-icon">
                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none"
@@ -127,8 +122,6 @@
                 </ul>
             </div>
         </section>
-
-<!-- Perguntas Frequentes -->
         <section id="faq">
             <h3 class="section-title">Perguntas Frequentes</h3>
             <div class="faq-item">
@@ -148,8 +141,6 @@
                 <p>Sim! Apesar do foco na Yamaha, tenho experiência com diversas marcas e modelos, sempre buscando soluções práticas e honestas.</p>
             </div>
         </section>
-
-
         <section id="sobre-mim" class="about-section">
             <div class="about-image">
                 <img src="images/river.jpg" alt="Foto do Dr. Yamaha em sua oficina" class="profile-image-large" width="250"
@@ -166,8 +157,6 @@
                         target="_blank" rel="noopener noreferrer" class="btn btn-whatsapp">Falar no WhatsApp</a>
             </div>
         </section>
-
-                <!-- convite para a newsletter -->
         <section id="newsletter" class="form-container">
             <h2 class="section-title">Receba a NewsLetter Mensal</h2>
             <p style="text-align: center; margin-bottom: 1.5rem;">
@@ -178,7 +167,6 @@
                 rel="noopener noreferrer"
                 class="btn btn-secondary" style="width: 100%; text-align: center;">Quero Receber</a>
         </section>
-
         <section id="depoimentos" class="grid-section">
             <h2 class="section-title" style="grid-column: 1 / -1;">O que dizem os clientes</h2>
             <div class="testimonial-card">
@@ -206,9 +194,7 @@
                 <p>Fabiano Athaide</p>
             </div>
         </section>
-
     </main>
-
     <footer class="footer">
         <div class="social-icons">
             <a href="https://www.youtube.com/@rivaldoferreira6556" target="_blank" rel="noopener noreferrer">
