--- a/index.html
+++ b/index.html
@@ -126,15 +126,15 @@
             <h3 class="section-title">Perguntas Frequentes</h3>
             <div class="faq-item">
                 <h3> A consultoria é online ou presencial?</h3>
-                <p>Ambas! Para inspeções físicas em motos, o atendimento é presencial em Montes Claros - MG. Para dúvidas e orientações, ofereço consultoria online por chamada ou mensagem.</p>
+                <p>Ambas! Para inspeções físicas em motos, o atendimento é presencial em Montes Claros - MG. Para dúvidas e orientações, ofereço consultoria online por chamada ou mensagem.<br></p>
             </div>
             <div class="faq-item">
                 <h3> Posso agendar só para tirar dúvidas simples?</h3>
-                <p>Sim! Você pode agendar uma consultoria pontual para esclarecer dúvidas específicas sobre sua moto ou manutenção.</p>
+                <p>Sim! Você pode agendar uma consultoria pontual para esclarecer dúvidas específicas sobre sua moto ou manutenção.<br></p>
             </div>
             <div class="faq-item">
                 <h3> Como sei se vale a pena comprar uma moto usada?</h3>
-                <p>Na consultoria de pré-compra, avaliamos a moto presencialmente (ou com fotos e vídeos), considerando desgaste, histórico e custo-benefício.</p>
+                <p>Na consultoria de pré-compra, avaliamos a moto presencialmente (ou com fotos e vídeos), considerando desgaste, histórico e custo-benefício.<br></p>
             </div>
             <div class="faq-item">
                 <h3> A consultoria serve para motos de outras marcas?</h3>
@@ -165,7 +165,7 @@
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfnCBsyV7TKFBBLcwIJxCXEiwVtwqFs6FaMem2iTmYCIvtdsw/viewform?usp=sharing&ouid=100901396024546504182"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="btn btn-secondary" style="width: 100%; text-align: center;">Quero Receber</a>
+                class="btn btn-secondary" style="width: 60%; text-align: center;">Quero Receber</a>
         </section>
         <section id="depoimentos" class="grid-section">
             <h2 class="section-title" style="grid-column: 1 / -1;">O que dizem os clientes</h2>
