--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfnCBsyV7TKFBBLcwIJxCXEiwVtwqFs6FaMem2iTmYCIvtdsw/viewform?usp=sharing&ouid=100901396024546504182"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="btn btn-secondary" style="width: 100%; text-align: center;">Quero Receber</a>
+                class="btn btn-whatsapp" style="width: 100%; text-align: center;">Quero Receber</a>
         </section>
         <section id="depoimentos" class="grid-section">
             <h2 class="section-title" style="grid-column: 1 / -1;">O que dizem os clientes</h2>
             <div class="testimonial-card">
-                <img src="images/dayv.jpg" alt="Yamaha" class="profile-image" width="320" height="320"
+                <img src="images/dayv.jpg" alt="Yamaha" class="profile-image" width="420" height="420"
                     loading="lazy" decoding="async">
                 <p>“Só quem já ficou na mão com mecânico enrolado sabe o tanto que é difícil achar alguém de confiança.
                     Mas o Dr. Yamaha é diferente. Ele explica tudo certinho, não enrola e ainda dá dica que a gente
@@ -178,7 +178,7 @@
                 <p>Dayvdson Silva</p>
             </div>
             <div class="testimonial-card">
-                <img src="images/mani.jpg" alt="Yamaha" class="profile-image" width="320" height="320"
+                <img src="images/mani.jpg" alt="Yamaha" class="profile-image" width="420" height="420"
                     loading="lazy" decoding="async">
                 <p>“Sabe aquele tipo de atendimento que parece que a pessoa conhece sua moto melhor que você? Pois é.
                     Atendimento do Dr. Yamaha é coisa fina. Resolveu um problema que outra oficina mexeu três vezes e
@@ -186,7 +186,7 @@
                 <p>Manilson Froes</p>
             </div>
             <div class="testimonial-card">
-                <img src="images/fabi.jpg" alt="Foto do Dr. Yamaha" class="profile-image" width="320" height="320"
+                <img src="images/fabi.jpg" alt="Foto do Dr. Yamaha" class="profile-image" width="420" height="420"
                     loading="lazy" decoding="async">
                 <p>“Eu valorizo serviço bem feito e palavra firme. E é isso que encontrei com a
                     consultoria do Dr. Yamaha. Ele entende mesmo, fala a real e entrega resultado. Não é só
