--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
     </nav>
     <div class="container">
         <div class="header text-center">
-            <p>Evite gastos desnecessários e faça as melhores escolhas para sua motocicleta com a ajuda de um especialista.</p>
+            <img src="images/logocon.png" alt="Dr. Yamaha" class="container">
+            <h2>Bem-vindo à sua nova jornada sobre duas rodas</h2>
+            <p>>Aqui você encontrara consultoria humanizada para te orientar na compra, manutenção e escolha de peças; um curso gratuito que ensina o essencial mesmo para iniciantes; uma calculadora de custos que revela o valor real de manter sua moto; e acesso a uma rede de serviços confiáveis.</p>
             <div class="cta-buttons">
                 <a href="curso.html" class="btn btn-secondary">Acesse Mini Curso Gratuito</a>
             </div>
