--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <li><a href="curso.html">Curso Gratuito</a></li>
                 <li><a href="calculadora.html">Calculadora de Custos</a>
                 <li><a href="ebook.html">Dicas de Manutenção</a></li>
-                <li><a href="#depoimentos">Depoimentos</a></li>
-                <li><a href="#sobre-mim">Sobre mim</a></li>
+                <li><a href="duvidas.html">Duvidas</a></li>
+                <li><a href="#sobre-mim">Sobre</a></li>
                 </li>
             </ul>
         </div>
