--- a/duvidas.html
+++ b/duvidas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Central de Dúvidas | Dr. Yamaha</title>
-    <link rel="stylesheet" href="css/duvidas.css.css"/>
+    <link rel="stylesheet" href="css/duvidas.css"/>
 
 
 </head>
