--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="curso.html">Curso Gratuito</a></li>
                 <li><a href="calculadora.html">Calculadora de Custos</a>
                 <li><a href="ebook.html">Dicas de Manutenção</a></li>
-                <li><a href="duvidas.html">Duvidas</a></li>
+                <li><a href="duvidas.html">Dúvidas</a></li>
                 <li><a href="#sobre-mim">Sobre</a></li>
                 </li>
             </ul>
