--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <p>Acompanhamento em visitas (somente em Montes Claros - MG) para avaliação física da moto (motor, chassi, suspensão, elétrica, pneus, desgaste geral), identificação de vícios ocultos ou problemas futuros.</p><br>
                     <h3>Preço: R$ 80,00</h3>
                     <h4>ou "A partir de R$ 100,00/hora"</h4>
-                    <p><br><a href="https://wa.me/5538988340443?text=Ol%C3%A1%20Dr.%20Yamaha!%20Quero%20uma%20consultoria%20de%20Pré-Compra."
+                    <p><br><a href="agendamento.html"
                         target="_blank" rel="noopener noreferrer" class="btn btn-whatsapp">Agendar Consulta</a></p>
                 </ul>
             </div>
@@ -97,7 +97,7 @@
                         <p>Recomendações para melhorar o desempenho, a pilotagem e a segurança da moto.</p><br>
                     <h3>Preço: R$ 100,00</h3>
                     <h4>ou "A partir de R$ 120,00/hora"</h4>
-                    <p><br><a href="https://wa.me/5538988340443?text=Ol%C3%A1%20Dr.%20Yamaha!%20Quero%20uma%20consultoria%20de%20Manutenção."
+                    <p><br><a href="agendamento.html"
                         target="_blank" rel="noopener noreferrer" class="btn btn-whatsapp">Agendar Consulta</a></p>
                 </ul>
             </div>
@@ -119,7 +119,7 @@
                         <p>Ajuda o cliente a entender orçamentos de serviços e peças, garantindo que não pague a mais ou que o serviço seja realmente necessário.</p><br>
                     <h3>Preço: R$ 60,00</h3>
                     <h4>ou "A partir de R$ 80,00/hora"</h4>
-                    <p><br><a href="https://wa.me/5538988340443?text=Ol%C3%A1%20Dr.%20Yamaha!%20Quero%20uma%20consultoria%20de%20Indicação."
+                    <p><br><a href="agendamento.html"
                         target="_blank" rel="noopener noreferrer" class="btn btn-whatsapp">Agendar Consulta</a></p>
                 </ul>
             </div>
@@ -155,7 +155,7 @@
                 <p>Acredito que conhecimento compartilhado fortalece a comunidade. Por isso, criei este espaço para
                     oferecer não apenas meus serviços de consultoria, mas também para empoderar você, com mini curso, calculadora de custo 
                     e materiais (clique no botão do Menu, no canto superior esquerdo da pagina) que desmistificam a mecânica e te ajudam a cuidar melhor da sua moto.</p>
-                <a href="https://wa.me/5538988340443?text=Ol%C3%A1%20Dr.%20Yamaha!%20Quero%20tirar%20duvidas."
+                <a href="https://wa.me/5538988340443?text=Ol%C3%A1%20Dr.%20Yamaha!%20Quero%20tirar%20duvida"
                         target="_blank" rel="noopener noreferrer" class="btn btn-whatsapp">Falar no WhatsApp</a>
             </div>
         </section>
