--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="header text-center">
             <img src="images/logocon.png" alt="Dr. Yamaha" class="container">
             <h2>Bem-vindo à sua nova jornada sobre duas rodas</h2>
-            <p>Aqui você encontrara consultoria humanizada para te orientar na compra, manutenção e escolha de peças; um curso gratuito que ensina o essencial mesmo para iniciantes; uma calculadora de custos que revela o valor real de manter sua moto; e acesso a uma rede de serviços confiáveis.</p>
+            <p>Aqui você encontrara consultoria humanizada para te orientar na compra, manutenção e escolha de peças; curso gratuito que ensina o essencial mesmo para iniciantes; uma calculadora de custos que revela o valor real de manter sua moto; e acesso a uma rede de serviços confiáveis.</p>
 <!--             <div class="cta-buttons">
                 <a href="curso.html" class="btn btn-secondary">Acesse Mini Curso Gratuito</a>
             </div> -->
@@ -167,7 +167,7 @@
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSfnCBsyV7TKFBBLcwIJxCXEiwVtwqFs6FaMem2iTmYCIvtdsw/viewform?usp=sharing&ouid=100901396024546504182"
                 target="_blank"
                 rel="noopener noreferrer"
-                class="btn btn-whatsapp" style="width: 100%; text-align: center;">Quero Receber</a>
+                class="btn btn-secondary" style="width: 100%; text-align: center;">Quero Receber</a>
         </section>
         <section id="depoimentos" class="grid-section">
             <h2 class="section-title" style="grid-column: 1 / -1;">O que dizem os clientes</h2>
