--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container">
         <div class="header text-center">
             <img src="images/logocon.png" alt="Dr. Yamaha" class="container">
-<!--             <h2>Bem-vindo à sua nova jornada sobre duas rodas</h2> -->
+            <h2>Bem-vindo à sua nova jornada sobre duas rodas</h2>
             <p>Aqui você encontrara consultoria humanizada para te orientar na compra, manutenção e escolha de peças; curso gratuito que ensina o essencial mesmo para iniciantes; uma calculadora de custos que revela o valor real de manter sua moto; e acesso a uma rede de serviços confiáveis.</p>
 <!--             <div class="cta-buttons">
                 <a href="curso.html" class="btn btn-secondary">Acesse Mini Curso Gratuito</a>
@@ -39,7 +39,7 @@
         </div>
     </div>
     <main class="container">
-        <section id="galeria">
+<!--         <section id="galeria">
             <div class="carousel">
                 <div class="carousel-track">
                     <img src="images/img1.jpg" alt="Imagem 1 da oficina" class="carousel-img">
@@ -50,7 +50,7 @@
                     <img src="images/img6.jpg" alt="Imagem 6 da oficina" class="carousel-img">
                 </div>
             </div>
-        </section>
+        </section> -->
         <section id="servicos" class="grid-section">
             <div class="card">
                 <div class="card-icon">
