--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 <span class="bar"></span>
             </button>
             <ul class="nav-links">
-                <li><a href="curso.html">Curso Gratuito</a></li>
-                <li><a href="calculadora.html">Calculadora de Custos</a>
-                <li><a href="ebook.html">Dicas de Manutenção</a></li>
-                <li><a href="duvidas.html">Dúvidas</a></li>
+                <li><a href="pages/curso.html">Curso Gratuito</a></li>
+                <li><a href="pages/calculadora.html">Calculadora de Custos</a>
+                <li><a href="pages/ebook.html">Dicas de Manutenção</a></li>
+                <li><a href="pages/duvidas.html">Dúvidas</a></li>
                 <li><a href="#sobre-mim">Sobre</a></li>
                 </li>
             </ul>
@@ -79,7 +79,7 @@
                         <p>Acompanhamento em visitas (somente em Montes Claros - MG) para avaliação física da moto (motor, chassi, suspensão, elétrica, pneus, desgaste geral), identificação de vícios ocultos ou problemas futuros.</p><br>
                     <h3>Preço: R$ 80,00</h3>
                     <h4>ou "A partir de R$ 100,00/hora"</h4>
-                    <p><br><a href="agendamento.html"
+                    <p><br><a href="pages/agendamento.html"
                         target="_blank" rel="noopener noreferrer" class="btn btn-whatsapp">Agendar Consulta</a></p>
                 </ul>
             </div>
@@ -104,7 +104,7 @@
                         <p>Recomendações para melhorar o desempenho, a pilotagem e a segurança da moto.</p><br>
                     <h3>Preço: R$ 100,00</h3>
                     <h4>ou "A partir de R$ 120,00/hora"</h4>
-                    <p><br><a href="agendamento.html"
+                    <p><br><a href="pages/agendamento.html"
                         target="_blank" rel="noopener noreferrer" class="btn btn-whatsapp">Agendar Consulta</a></p>
                 </ul>
             </div>
@@ -126,7 +126,7 @@
                         <p>Ajuda o cliente a entender orçamentos de serviços e peças, garantindo que não pague a mais ou que o serviço seja realmente necessário.</p><br>
                     <h3>Preço: R$ 60,00</h3>
                     <h4>ou "A partir de R$ 80,00/hora"</h4>
-                    <p><br><a href="agendamento.html"
+                    <p><br><a href="pages/agendamento.html"
                         target="_blank" rel="noopener noreferrer" class="btn btn-whatsapp">Agendar Consulta</a></p>
                 </ul>
             </div>
@@ -245,3 +245,4 @@
 </body>
 </html>
     
+
