--- a/pages/calculadora.html
+++ b/pages/calculadora.html
@@ -30,7 +30,7 @@
         <input type="number" id="anos" placeholder="Ex: 3">
 
         <button onclick="calcular()">Calcular Custo Total</button>
-        <button onclick="window.location.href = 'index.html'" class="button">Voltar</button>
+        <button onclick="window.location.href = '../index.html'" class="button">Voltar</button>
 
         <div class="result" id="resultado" style="display:none;">
             <h2>Resultado</h2>
@@ -41,6 +41,7 @@
         </div>
     </div>
 
-    <script src="js/calculadora.js"></script>
+    <script src="../js/calculadora.js"></script>
 </body>
+
 </html>
