--- a/pages/agendamento.html
+++ b/pages/agendamento.html
@@ -44,7 +44,8 @@
         <button type="submit">Confirmar e Enviar pelo WhatsApp</button>
     </form>
 
-    <script src="js/agendamento.js"></script>
+    <script src="../js/agendamento.js"></script>
 </body>
+
 
 </html>
