--- a/pages/duvidas.html
+++ b/pages/duvidas.html
@@ -44,6 +44,7 @@
             <button type="submit">Enviar via WhatsApp</button>
         </form>
     </div>
-    <script src="js/duvidas.js"></script>
+    <script src="../js/duvidas.js"></script>
 </body>
 </html>
+
