--- a/pages/ebook.html
+++ b/pages/ebook.html
@@ -71,10 +71,11 @@
 
         <footer class="conclusion">
             <p style="margin-bottom: 1.5rem; color: var(--text-secondary);">Cuidar bem da sua Yamaha é garantir mais quilômetros de pura emoção e segurança. Para dúvidas ou uma análise completa, conte com minha consultoria!</p>
-            <a href="index.html" class="btn">Voltar</a>
+            <a href="../index.html" class="btn">Voltar</a>
         </footer>
 
     </div>
 </body>
+
 
 </html>
