--- a/pages/curso.html
+++ b/pages/curso.html
@@ -287,9 +287,10 @@
         <a href="../index.html" class="btn">Voltar</a>
     </div>
     </div>
-    <audio id="quiz-audio" src="assets/topic.mp3" preload="auto" loop></audio>
+    <audio id="quiz-audio" src="../assets/topic.mp3" preload="auto" loop></audio>
 </body>
     <script src="../js/curso.js"></script>
     
 </html>
+
 
