--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <li><a href="pages/calculadora.html">Calculadora de Custos</a>
                 <li><a href="pages/ebook.html">Dicas de Manutenção</a></li>
                 <li><a href="pages/duvidas.html">Dúvidas</a></li>
+                <li><a href="pages/simulador.html">Simulador de Revisões</a></li>
                 <li><a href="#sobre-mim">Sobre</a></li>
                 </li>
             </ul>
@@ -245,4 +246,5 @@
 </body>
 </html>
     
+
 
