--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
             </button>
             <ul class="nav-links">
                 <li><a href="pages/curso.html">Curso Gratuito</a></li>
+                <li><a href="pages/cupons.html">Cupons</a></li>
                 <li><a href="pages/calculadora.html">Calculadora de Custos</a>
-                <li><a href="pages/ebook.html">Dicas de Manutenção</a></li>
+                <li><a href="pages/ebook.html">Dicas</a></li>
                 <li><a href="pages/duvidas.html">Dúvidas</a></li>
                 <li><a href="pages/simulador.html">Simulador de Revisões</a></li>
                 <li><a href="#sobre-mim">Sobre</a></li>
@@ -34,8 +35,10 @@
     </nav>
     <div class="container">
         <div class="header text-center">
-            <h2>Bem-vindo à sua nova jornada sobre duas rodas</h2>
-            <p>Aqui você encontrara consultoria humanizada para te orientar na compra, manutenção e escolha de peças; curso gratuito que ensina o essencial mesmo para iniciantes; uma calculadora de custos que revela o valor real de manter sua moto; e acesso a uma rede de serviços confiáveis.</p>
+            <h2>Sua jornada sobre duas rodas começa aqui.</h2>
+            <p>Em nossa plataforma, a consultoria é mais do que um serviço: é um guia personalizado para a sua compra, manutenção, escolha de peças e planejamentos de orçamento. Queremos que você se sinta seguro e preparado, por isso oferecemos um curso gratuito que cobre o essencial, desde os primeiros passos até a manutenção básica.
+               Junte-se a nós e transforme sua experiência em algo extraordinário.
+            </p>
         </div>
         <section id="galeria">
             <div class="carousel">
@@ -246,5 +249,6 @@
 </body>
 </html>
     
+
 
 
