--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="pages/ebook.html">Dicas</a></li>
                 <li><a href="pages/duvidas.html">Dúvidas</a></li>
                 <li><a href="pages/simulador.html">Simulador de Revisões</a></li>
-                <li><a href="#sobre-mim">Sobre</a></li>
+<!--                 <li><a href="#sobre-mim">Sobre</a></li> -->
                 </li>
             </ul>
         </div>
@@ -249,6 +249,7 @@
 </body>
 </html>
     
+
 
 
 
